NetBSD Problem Report #56366

From tsutsui@ceres.dti.ne.jp  Mon Aug 16 17:58:41 2021
Return-Path: <tsutsui@ceres.dti.ne.jp>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 478751A921F
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 16 Aug 2021 17:58:41 +0000 (UTC)
Message-Id: <202108161758.17GHwVBs023433@ceres.dti.ne.jp>
Date: Tue, 17 Aug 2021 02:58:31 +0900 (JST)
From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
Reply-To: tsutsui@ceres.dti.ne.jp
To: gnats-bugs@NetBSD.org
Cc: tsutsui@ceres.dti.ne.jp
Subject: Suspicious message in ehci(4) on single user boot
X-Send-Pr-Version: 3.95

>Number:         56366
>Category:       kern
>Synopsis:       Suspicious message in ehci(4) on single user boot
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Aug 16 18:00:00 +0000 2021
>Closed-Date:    Fri Sep 03 20:18:36 +0000 2021
>Last-Modified:  Fri Sep 03 20:18:36 +0000 2021
>Originator:     Izumi Tsutsui
>Release:        NetBSD 9.2
>Organization:
>Environment:
System: NetBSD mirage 9.2 NetBSD 9.2 (GENERIC) #0: Wed May 12 13:15:55 UTC 2021
        mkrepro@mkrepro.NetBSD.org:/usr/src/sys/arch/i386/compile/GENERIC
Architecture: i386
Machine: i386
>Description:
On booting NetBSD/i386 9.2 GENERIC onto single user on my Biostar iDEQ 200S
https://www.biostar-usa.com/ideqdetails.asp?model=ideq+200s
there is a suspicious message during boot:
---
Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
    2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017,
    2018, 2019, 2020 The NetBSD Foundation, Inc.  All rights reserved.
Copyright (c) 1982, 1986, 1989, 1991, 1993
    The Regents of the University of California.  All rights reserved.

NetBSD 9.2 (GENERIC) #0: Wed May 12 13:15:55 UTC 2021
	mkrepro@mkrepro.NetBSD.org:/usr/src/sys/arch/i386/compile/GENERIC
total memory = 1983 MB
avail memory = 1930 MB

 :

ehci0 at pci0 dev 3 function 3: vendor 1039 product 7002 (rev. 0x00)
ehci0: interrupting at ioapic0 pin 23
ehci0: EHCI version 1.0
ehci0: 3 companion controllers, 2 ports each: ohci0 ohci1 ohci2
usb3 at ehci0: USB revision 2.0

 :

ahc1 at pci0 dev 8 function 0: Adaptec 2940A Ultra SCSI adapter
ahc1: interrupting at ioapic0 pin 17
ahc1: aic7860: Ultra Single Channel A, SCSI Id=7, 3/253 SCBs
scsibus0 at ahc1: 8 targets, 8 luns per target

:

uhub2: 2 ports with 2 removable, self powered
uhub3 at usb3: NetBSD (0000) EHCI root hub (0000), class 9/0, rev 2.00/1.00, addr 1
uhub3: 6 ports with 6 removable, self powered
delaying ask root by 5 seconds due to USB owner change.sd0 at scsibus0 target 0 lun 0: <FUJITSU, M2952S-512, 0147> disk fixed
sd0: 2291 MB, 5714 cyl, 5 head, 164 sec, 512 bytes/sect x 4693462 sectors
sd0: sync (50.00ns offset 15), 8-bit (20.000MB/s) transfers, tagged queueing
---

> delaying ask root by 5 seconds due to USB owner change.sd0 at scsibus0 target 0 lun 0: <FUJITSU, M2952S-512, 0147> disk fixed

The above message is from src/sys/dev/usb/ehci.c:ehci_disown_sched_callback():
 https://nxr.netbsd.org/xref/src/sys/dev/usb/ehci.c?r=1.267.2.4#2657
---
   2657 	aprint_normal("delaying %s by %u seconds due to USB owner change.",
   2658 	    (boothowto & RB_ASKNAME) == 0 ? "ask root" : "single user",
   2659 	    ehci_disown_delay_seconds);
---

I'm not sure what this message intends, but it looks:
- a newline at the end of the message is missing
- a logic "(boothowto & RB_ASKNAME) == 0" seems inverted

A full dmesg (not to single user) is here:
 https://dmesgd.nycbug.org/index.cgi?do=view&id=6158

>How-To-Repeat:
Boot a kernel to single user on ehci(4) hosts with a certain BIOS settings?

>Fix:
Add a newline and fix inverted logic?

---
Izumi Tsutsui

>Release-Note:

>Audit-Trail:
From: "matthew green" <mrg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56366 CVS commit: src/sys/dev/usb
Date: Tue, 31 Aug 2021 08:22:28 +0000

 Module Name:	src
 Committed By:	mrg
 Date:		Tue Aug 31 08:22:28 UTC 2021

 Modified Files:
 	src/sys/dev/usb: ehci.c

 Log Message:
 add missing newline and fix conditional for askroot/single user
 hand over delay message.  PR#56366.


 To generate a diff of this commit:
 cvs rdiff -u -r1.285 -r1.286 src/sys/dev/usb/ehci.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: mrg@NetBSD.org
State-Changed-When: Tue, 31 Aug 2021 23:06:06 +0000
State-Changed-Why:
fix is submitted, pullup requested.


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56366 CVS commit: [netbsd-9] src/sys/dev/usb
Date: Fri, 3 Sep 2021 10:25:36 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Fri Sep  3 10:25:36 UTC 2021

 Modified Files:
 	src/sys/dev/usb [netbsd-9]: ehci.c

 Log Message:
 Pull up following revision(s) (requested by mrg in ticket #1340):

 	sys/dev/usb/ehci.c: revision 1.286

 add missing newline and fix conditional for askroot/single user
 hand over delay message.  PR#56366.


 To generate a diff of this commit:
 cvs rdiff -u -r1.267.2.4 -r1.267.2.5 src/sys/dev/usb/ehci.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: mrg@NetBSD.org
State-Changed-When: Fri, 03 Sep 2021 20:18:36 +0000
State-Changed-Why:
pullups done, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.