add missing newline and fix conditional for askroot/single user hand over delay message.  PR#56366.